# config/packages/nelmio_api_doc.yaml
@@ -4,9 +4,17 @@ nelmio_api_doc:
             title: My App
             description: This is an awesome app!
             version: 1.0.0
+        securityDefinitions:
+            Bearer:
+                type: apiKey
+                name: Authorization
+                in: header
+        security:
+            - Bearer: []
         paths:
             /api/auth/login:
                 post:
+                    tags: ["Auth"]
                     summary: "User login"
                     requestBody:
                         required: true
@@ -31,10 +39,15 @@ nelmio_api_doc:
                                                 type: string
                                             refreshToken:
                                                 type: string
+                                examples:
+                                    application/json:
+                                        value:
+                                            token: "your-jwt-token"
                         '401':
                             description: "Invalid credentials"
             /api/auth/refresh:
                 post:
+                    tags: ["Auth"]
                     summary: "Refresh JWT token"
                     responses:
                         '200':
@@ -48,6 +61,6 @@ nelmio_api_doc:
                                                 type: string
                         '403':
                             description: "Token refresh denied"
-    areas: # to filter documented areas
+    areas:
         path_patterns:
             - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
